@@ -3,11 +3,7 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- pushing out experimental stuff:
-  EXPERIMENTAL=1 (enable all experiments)
-  PERL_GET_SET_HANDLERS=1 if PERL_STACKED_HANDLERS
-  PERL_MARK_WHERE=1 if PERL_TRACE
-  PERL_SECTIONS_SELF_BOOT=1 if PERL_SECTIONS
+- $r->log->$level(sub {})
 
 - 'make htmldoc' (Brian Moseley)
 
@@ -38,6 +34,8 @@ Lupe Christoph <lupe@alanya.m.isar.de>, Don Hayward <don@mote.org>
 
 - rand() broken under win32!
            Jeff Baker <jeff@godzilla.tamu.edu>
+
+- -Tw w/o PerlTaintCheck cause SEGV? Dave Hodgkinson <daveh@sift.co.uk>
 
 ---------------------------------------------------------------------------
 DOCUMENTATION (areas that *really* need some more or don't have any)
